// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableListing renders 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="list-group list-group-flush"
    />
  </div>
</DocumentFragment>
`;

exports[`TableListing renders 2`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="list-group list-group-flush"
    >
      <div
        class="list-group-item"
      >
        <a
          href="/tree/main/a"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
            />
          </svg>
          a
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TableListing renders object 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="list-group list-group-flush"
    />
  </div>
</DocumentFragment>
`;

exports[`TableListing renders object 2`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="list-group list-group-flush"
    >
      <div
        class="list-group-item"
      >
        <a
          href="/contents/main/b"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v5h5v11H6z"
            />
          </svg>
          b
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
